--- a/static/sass/_common.sass
+++ b/static/sass/_common.sass
@@ -10,6 +10,9 @@ body
   font-family: 'MuseoSansCyrl-300', sans-serif
   color: $color_text
 
+
+.main
+  scroll-behavior: smooth
 button[type='button']
   display: none
 
