--- a/static/sass/_common.sass
+++ b/static/sass/_common.sass
@@ -5,6 +5,8 @@ $color_yellow: #ffd05d
 $color_border: #dddde0
 $color_l_blue: #009cff
 $bg-grey: #f8f9fb
+$error: rgba(255, 35, 35, 0.77)
+
 body
   font-size: 14px
   font-family: 'MuseoSansCyrl-300', sans-serif
@@ -118,6 +120,7 @@ h5
   cursor: pointer
   z-index: 10
   position: relative
+  transition: all .3s linear
 
 .btn-md
   padding: 25px 85px
@@ -129,7 +132,7 @@ h5
 @media (max-width: 575px)
   .btn-lg, .btn-md
     padding: 15px 0
-    width: 100% !important
+    width: 95% !important
 
 
 
