--- a/static/sass/_header.sass
+++ b/static/sass/_header.sass
@@ -394,6 +394,7 @@
   display: grid
   grid-template-columns: repeat(auto-fill, minmax(200px,223px))
   grid-gap: 15px
+  margin-bottom: 30px
   &::before
     content: ''
     width: calc(100% - 30px)
@@ -773,6 +774,7 @@
     color: $color_grey
 
 .our-help-media-slide-item
+  cursor: pointer
 
   h5
     margin: 20px 0 25px 0
