--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -44,48 +44,8 @@
         <div style="margin-top: 140px" class="container-sm">
             <h3 class="text-center">Узнайте стоимость своей работы</h3>
             <h4 class="text-center">Мы пришлём точный ответ на вашу почту</h4>
-            <div class="calculation-form-wrapper">
-                <div class="calculation-form-inner">
-                    <div class="form-row">
-                        <div class="select-wrapper">
-                            <select class="form-control" >
-                                <option selected="selected" value="">Вид работы</option>
-                                {% for service in allService %}
-                                <option value="{{ service.id }}">{{ service.name }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                       <div class="select-wrapper">
-                            <select class="form-control" >
-                                <option selected="selected" value="">Предмет</option>
-                                 {% for subject in allSubjects %}
-                                    <option value="{{ subject.id }}">{{ subject.name }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
 
-                        <input class="form-control" value="" placeholder="Предмет">
-                        <div class="d-flex-jc-sb">
-                            <input class="form-control form-control-sm " value="" placeholder="Предмет">
-                            <input class="form-control form-control-sm" value="" placeholder="Предмет">
-                        </div>
-                        <input class="form-control form-control-lg" value="" placeholder="Предмет">
-                    </div>
-
-
-                </div>
-                <div class="calculation-form-footer">
-                    <input class="form-control" value="" placeholder="Предмет">
-                    <input class="form-control" value="" placeholder="Предмет">
-                    <input class="form-control" value="" placeholder="Предмет">
-                </div>
-                <button  class="btn btn-lg m-a mt30 mb30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></button>
-
-                <label class="custom-checkbox"><span>Даю согласие на обработку моих персональных данных</span>
-                    <input name="" checked  type="checkbox">
-                    <span class="checkmark"></span>
-                </label>
-            </div>
+            {% include 'callback_form.html' %}
         </div>
     </section><!-- // calculation-form -->
     <section class="about-man">
@@ -186,12 +146,12 @@
                 <div class="slider-arrows">
                     <div class="slider-arrow-left ">
                         <a id="arrow-left" href="javascript:void(0)"><span>&#8592;</span>
-                        <p>Предыдущий<br/>этап</p>
+                            <p>Предыдущий<br/>этап</p>
                         </a>
                     </div>
                     <div class="slider-arrow-right">
                         <a id="arrow-right" href="javascript:void(0)"><span class="text-right">&#8594;</span>
-                        <p class="text-right">Следующий<br/>этап</p>
+                            <p class="text-right">Следующий<br/>этап</p>
                         </a>
                     </div>
                 </div><!-- // slider-arrows -->
@@ -306,117 +266,117 @@
 
 {% block js %}
     <script src="{% static 'js/tiny-slider.js' %}"></script>
-<script>
-    var mobile = 'false',
-        isTestPage = false,
-        isDemoPage = true,
-        classIn = 'jello',
-        classOut = 'rollOut',
-        speed = 400,
-        doc = document,
-        win = window,
-        ww = win.innerWidth || doc.documentElement.clientWidth || doc.body.clientWidth,
-        fw = getFW(ww),
-        initFns = {},
-        sliders = new Object(),
-        edgepadding = 50,
-        gutter = 10;
+    <script>
+        var mobile = 'false',
+            isTestPage = false,
+            isDemoPage = true,
+            classIn = 'jello',
+            classOut = 'rollOut',
+            speed = 400,
+            doc = document,
+            win = window,
+            ww = win.innerWidth || doc.documentElement.clientWidth || doc.body.clientWidth,
+            fw = getFW(ww),
+            initFns = {},
+            sliders = new Object(),
+            edgepadding = 50,
+            gutter = 10;
 
-    function getFW (width) {
-        var sm = 400, md = 900, lg = 1400;
-        return width < sm ? 150 : width >= sm && width < md ? 200 : width >= md && width < lg ? 300 : 400;
-    }
-    window.addEventListener('resize', function() { fw = getFW(ww); });
-
-    var options = {
-        'our-help-media-slider': {
-            container: '',
-            items: 4,
-            controlsContainer: '#customize-controls',
-            autoplay: true,
-            autoplayTimeout: 4000,
-            speed: 1000,
-        },
-    }
-
-    for (var i in options) {
-        var item = options[i];
-        item.container = '#' + i;
-        item.swipeAngle = false;
-        if (!item.speed) { item.speed = speed; }
-        if (document.querySelector(item.container)) {
-            sliders[i] = tns(options[i]);
-            if (isTestPage && initFns[i]) { initFns[i](); }
-        } else if (i.indexOf('responsive') >= 0) {
-            if (isTestPage && initFns[i]) { initFns[i](); }
+        function getFW (width) {
+            var sm = 400, md = 900, lg = 1400;
+            return width < sm ? 150 : width >= sm && width < md ? 200 : width >= md && width < lg ? 300 : 400;
         }
-    }
+        window.addEventListener('resize', function() { fw = getFW(ww); });
 
-    let mobile_button = document.getElementsByClassName('mobile-toggle')[0]
-    let mobile_menu_panel = document.getElementsByClassName('mobile-menu-panel')[0]
-    let mobile_menu = document.getElementsByClassName('mobile-menu-panel-inner')[0]
-    let arrow_left = document.getElementById('arrow-left')
-    let arrow_right = document.getElementById('arrow-right')
-    let last_slide = 1
-    let current_slide = 1
-
-    mobile_button.onclick = function () {
-        this.classList.toggle('mobile-toggle-active')
-        mobile_menu_panel.classList.toggle('mobile-menu-panel-active')
-        mobile_menu.classList.toggle('mobile-menu-panel-inner-active')
-    }
-    window.addEventListener('scroll', function() {
-        console.log(window.innerWidth)
-        if (window.innerWidth >991 && pageYOffset > 200){
-            document.getElementsByClassName('header-dropdown')[0].style.display = 'flex'
-            document.getElementsByClassName('header-dropdown')[0].classList.add('header-slide-bottom')
-            document.getElementsByClassName('header-dropdown')[0].classList.remove('header-slide-top')
-
-        }else{
-            document.getElementsByClassName('header-dropdown')[0].classList.remove('header-slide-bottom')
-            document.getElementsByClassName('header-dropdown')[0].classList.add('header-slide-top')
-        }
-    });
-
-    arrow_left.onclick = function () {
-        console.log('left click')
-        console.log('last_slide before', last_slide)
-        console.log('current_slide before', current_slide)
-         let cur_slide = document.getElementsByClassName('slide-active')[0]
-        last_slide = current_slide
-        if (current_slide-1 < 1){
-           current_slide = 4
-        }else {
-          current_slide -= 1
+        var options = {
+            'our-help-media-slider': {
+                container: '',
+                items: 4,
+                controlsContainer: '#customize-controls',
+                autoplay: true,
+                autoplayTimeout: 4000,
+                speed: 1000,
+            },
         }
 
-        changeSlide()
-    }
-
-    arrow_right.onclick = function () {
-        console.log('right click')
-        console.log('last_slide before', last_slide)
-        console.log('current_slide before', current_slide)
-        let cur_slide = document.getElementsByClassName('slide-active')[0]
-        last_slide = current_slide
-          if (current_slide+1 > 4){
-           current_slide = 1
-        }else {
-          current_slide += 1
+        for (var i in options) {
+            var item = options[i];
+            item.container = '#' + i;
+            item.swipeAngle = false;
+            if (!item.speed) { item.speed = speed; }
+            if (document.querySelector(item.container)) {
+                sliders[i] = tns(options[i]);
+                if (isTestPage && initFns[i]) { initFns[i](); }
+            } else if (i.indexOf('responsive') >= 0) {
+                if (isTestPage && initFns[i]) { initFns[i](); }
+            }
         }
-    changeSlide()
-    }
 
-    function changeSlide() {
-        console.log(current_slide)
+        let mobile_button = document.getElementsByClassName('mobile-toggle')[0]
+        let mobile_menu_panel = document.getElementsByClassName('mobile-menu-panel')[0]
+        let mobile_menu = document.getElementsByClassName('mobile-menu-panel-inner')[0]
+        let arrow_left = document.getElementById('arrow-left')
+        let arrow_right = document.getElementById('arrow-right')
+        let last_slide = 1
+        let current_slide = 1
+
+        mobile_button.onclick = function () {
+            this.classList.toggle('mobile-toggle-active')
+            mobile_menu_panel.classList.toggle('mobile-menu-panel-active')
+            mobile_menu.classList.toggle('mobile-menu-panel-inner-active')
+        }
+        window.addEventListener('scroll', function() {
+            console.log(window.innerWidth)
+            if (window.innerWidth >991 && pageYOffset > 200){
+                document.getElementsByClassName('header-dropdown')[0].style.display = 'flex'
+                document.getElementsByClassName('header-dropdown')[0].classList.add('header-slide-bottom')
+                document.getElementsByClassName('header-dropdown')[0].classList.remove('header-slide-top')
+
+            }else{
+                document.getElementsByClassName('header-dropdown')[0].classList.remove('header-slide-bottom')
+                document.getElementsByClassName('header-dropdown')[0].classList.add('header-slide-top')
+            }
+        });
+
+        arrow_left.onclick = function () {
+            console.log('left click')
+            console.log('last_slide before', last_slide)
+            console.log('current_slide before', current_slide)
+            let cur_slide = document.getElementsByClassName('slide-active')[0]
+            last_slide = current_slide
+            if (current_slide-1 < 1){
+                current_slide = 4
+            }else {
+                current_slide -= 1
+            }
+
+            changeSlide()
+        }
+
+        arrow_right.onclick = function () {
+            console.log('right click')
+            console.log('last_slide before', last_slide)
+            console.log('current_slide before', current_slide)
+            let cur_slide = document.getElementsByClassName('slide-active')[0]
+            last_slide = current_slide
+            if (current_slide+1 > 4){
+                current_slide = 1
+            }else {
+                current_slide += 1
+            }
+            changeSlide()
+        }
+
+        function changeSlide() {
+            console.log(current_slide)
             document.getElementById(`step_${last_slide}`).classList.remove('step-active')
             document.getElementById(`slide_${last_slide}`).classList.remove('slide-active')
 
-        setTimeout(function() {
-            document.getElementById(`step_${current_slide}`).classList.add('step-active')
-            document.getElementById(`slide_${current_slide}`).classList.add('slide-active')
+            setTimeout(function() {
+                document.getElementById(`step_${current_slide}`).classList.add('step-active')
+                document.getElementById(`slide_${current_slide}`).classList.add('slide-active')
 
-        }, 300);
-    }
-</script>
+            }, 300);
+        }
+    </script>
 {% endblock %}
